--- a/src/app/core/teams/view-team/general-details/general-details.component.html
+++ b/src/app/core/teams/view-team/general-details/general-details.component.html
@@ -1,7 +1,7 @@
 <div class="cards row pb-5" *ngIf="team">
 	<div class="col col-na-xl-7 col-12">
 		<div class="card">
-			<div class="card-header d-flex align-items-center">
+			<div class="card-header">
 				<h2>Members</h2>
 			</div>
 			<div class="card-body">
@@ -12,7 +12,7 @@
 
 	<div class="col col-na-xl-5 col-12">
 		<div class="card">
-			<div class="card-header d-flex align-items-center">
+			<div class="card-header">
 				<h2>Details</h2>
 				<button
 					class="btn btn-outline-secondary ml-3"
@@ -156,7 +156,7 @@
 
 	<div class="col col-na-xl-7 col-12" *ngIf="nestedTeamsEnabled">
 		<div class="card">
-			<div class="card-header d-flex align-items-center">
+			<div class="card-header">
 				<h2>Sub-Teams</h2>
 			</div>
 			<div class="card-body">
