fix(teams): Track search/filters for sub team list separate from team list

--- a/src/app/core/teams/view-team/general-details/general-details.component.html
+++ b/src/app/core/teams/view-team/general-details/general-details.component.html
@@ -160,7 +160,7 @@
 				<h2>Sub-Teams</h2>
 			</div>
 			<div class="card-body">
-				<app-list-teams [parent]="team" [embedded]="true"></app-list-teams>
+				<app-list-sub-teams [parent]="team" [embedded]="true"></app-list-sub-teams>
 			</div>
 		</div>
 	</div>
