--- a/src/app/core/admin/end-user-agreement/manage-eua.component.html
+++ b/src/app/core/admin/end-user-agreement/manage-eua.component.html
@@ -30,7 +30,7 @@
 					class="form-control"
 					id="title"
 					name="title"
-					[(ngModel)]="eua.euaModel.title"
+					[(ngModel)]="eua.title"
 					required
 				/>
 			</div>
@@ -44,7 +44,7 @@
 					class="form-control"
 					id="text"
 					name="text"
-					[(ngModel)]="eua.euaModel.text"
+					[(ngModel)]="eua.text"
 					required
 				></textarea>
 			</div>
