--- a/src/app/common/table/table-empty-state/asy-table-empty-state.component.scss
+++ b/src/app/common/table/table-empty-state/asy-table-empty-state.component.scss
@@ -1,3 +1,4 @@
+@use 'sass:map';
 @import '../../../../styles/shared';
 @import '../../../../styles/ngx-bootstrap/shared';
 
@@ -8,5 +9,5 @@
 .media img {
 	height: 90px;
 	width: 90px;
-	margin-right: map-get($spacers, 5);
+	margin-right: map.get($spacers, 5);
 }
