--- a/src/styles/_ng-select.scss
+++ b/src/styles/_ng-select.scss
@@ -18,7 +18,7 @@ $ng-select-placeholder: $input-placeholder-color !default;
 $ng-select-height: $input-height !default;
 $ng-select-value-padding-left: $input-padding-x !default;
 
-@import '../../node_modules/@ng-select/ng-select/scss/default.theme';
+@import '../../node_modules/@ng-select/ng-select/scss/default.theme'; /* stylelint-disable-line no-invalid-position-at-import-rule */
 
 $ng-select-tag-color: #f9f9f9 !default;
 $ng-select-tag-bg-color: $ux-color-primary !default;
