--- a/src/app/core/admin/cache-entries/cache-entry-modal.component.html
+++ b/src/app/core/admin/cache-entries/cache-entry-modal.component.html
@@ -8,13 +8,13 @@
 	<div class="row">
 		<div class="col-md-12">
 			<label>Key</label>
-			<div>{{ cacheEntry?.key }}</div>
+			<div>{{ cacheEntry.key }}</div>
 
 			<label>Last Updated</label>
-			<div>{{ cacheEntry?.date | utcDate }} ({{ cacheEntry?.date | agoDate: false }})</div>
+			<div>{{ cacheEntry.date | utcDate }} ({{ cacheEntry.date | agoDate: false }})</div>
 
 			<label>Value</label>
-			<pre>{{ cacheEntry?.value | json }}</pre>
+			<pre>{{ cacheEntry.value | json }}</pre>
 		</div>
 	</div>
 </asy-modal>
