adding value to config, adding ui check

--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -180,7 +180,10 @@
 									>
 								</li>
 								<li>
-									<a class="dropdown-item" (click)="confirmDeleteUser(user)"
+									<a
+										class="dropdown-item"
+										*ngIf="allowDelete"
+										(click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
 								</li>
