changing to allowUserDelete

--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -182,7 +182,7 @@
 								<li>
 									<a
 										class="dropdown-item"
-										*ngIf="allowDelete"
+										*ngIf="allowUserDelete"
 										(click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
