moving ngIf to <li>

--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -179,11 +179,8 @@
 										>Edit</a
 									>
 								</li>
-								<li>
-									<a
-										class="dropdown-item"
-										*ngIf="allowUserDelete"
-										(click)="confirmDeleteUser(user)"
+								<li *ngIf="allowUserDelete">
+									<a class="dropdown-item" (click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
 								</li>
