changing to allowDeleteUser

--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -179,7 +179,7 @@
 										>Edit</a
 									>
 								</li>
-								<li *ngIf="allowUserDelete">
+								<li *ngIf="allowDeleteUser">
 									<a class="dropdown-item" (click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
