feat(user): adding new config value for user deletion
* adding value to config, adding ui check

* adding new config variable to a separate test

* changing to allowUserDelete

* moving ngIf to <li>

* changing to allowDeleteUser

Co-authored-by: smasucci <smasucci@asymmetrik.com>

--- a/src/app/core/admin/user-management/list-users/admin-list-users.component.html
+++ b/src/app/core/admin/user-management/list-users/admin-list-users.component.html
@@ -179,7 +179,7 @@
 										>Edit</a
 									>
 								</li>
-								<li>
+								<li *ngIf="allowDeleteUser">
 									<a class="dropdown-item" (click)="confirmDeleteUser(user)"
 										>Delete</a
 									>
