--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -130,6 +130,7 @@
 					<ul class="popover-menu" role="menu">
 						<!-- User Signout -->
 						<li><a href="/api/auth/signout">Sign out</a></li>
+						<li *ngIf="euaExists"><a [routerLink]="['/eua']">EUA</a></li>
 
 						<!-- User Preferences -->
 						<li *ngIf="showUserPreferencesLink">
