Removing call to getCurrentEua.  Eua is available on the session object that is already available to the site navbar.  Using session also resolves issue with the menu option not appearing until after a refresh.

--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -130,7 +130,7 @@
 					<ul class="popover-menu" role="menu">
 						<!-- User Signout -->
 						<li><a href="/api/auth/signout">Sign out</a></li>
-						<li *ngIf="eua"><a [routerLink]="['/eua']">EUA</a></li>
+						<li *ngIf="session?.user?.eua"><a [routerLink]="['/eua']">View EUA</a></li>
 
 						<!-- User Preferences -->
 						<li *ngIf="showUserPreferencesLink">
