adding references to v4 in index.html

--- a/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
+++ b/src/app/core/audit/list-audit-entries/list-audit-entries.component.html
@@ -28,7 +28,7 @@
 			</ng-container>
 			<ng-container cdkColumnDef="created">
 				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>
-					<span class="fa fa-clock-o"></span>
+					<span class="fa fa-clock"></span>
 					Timestamp
 					<asy-header-filter date-filter></asy-header-filter>
 				</th>
@@ -118,7 +118,7 @@
 			</ng-container>
 			<ng-container cdkColumnDef="message">
 				<th cdk-header-cell asy-sort-header *cdkHeaderCellDef>
-					<span class="fa fa-file-text-o"></span>
+					<span class="fa fa-file-text"></span>
 					Message
 				</th>
 				<td cdk-cell *cdkCellDef="let entry" class="text-nowrap">
