--- a/src/app/core/site-navbar/site-navbar.component.html
+++ b/src/app/core/site-navbar/site-navbar.component.html
@@ -80,7 +80,7 @@
 					routerLinkActive="active-link"
 					routerLink="/audit"
 				>
-					<span class="fa fa-fw fa-file-text-o"></span>
+					<span class="fa fa-fw fa-file-text"></span>
 					<span [hidden]="!navbarOpen">Audit Logs</span>
 				</a>
 			</li>
