--- a/src/styles/_selection.scss
+++ b/src/styles/_selection.scss
@@ -139,7 +139,7 @@ input {
 			}
 
 			&:after {
-				font: normal normal normal math.div($checkbox-inner-size, 1) FontAwesome; /* stylelint-disable-line */
+				font: var(--fa-font-solid);
 				color: $ux-color-white;
 				content: '\f00c';
 				top: $checkbox-inner-margin;
